--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     <!-- NAVIGATION -->
   <nav class="navbar navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="/">Products App</a>
+      <a class="navbar-brand" href="/">Products App - Stay Chill</a>
     </div>
   </nav>
 
@@ -38,7 +38,7 @@
               </div>
             </div>
           <button type="Submit" class="btn btn-primary">
-            Create Product
+            Save Product
           </button>
         </form>
       </div>
